--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,40 +1,33 @@
 * {
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    height: 100%;
-    background-color: #70B85D;
-    color: white;
+    margin: 0;
     padding: 20px;
-    font-family: 'Karla', sans-serif;
-    font-size: 1.3rem;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
 }
 
-button {
+input[type="text"], input[type="email"] {
+    margin-bottom: 15px;
+    height: 30px;
+    text-indent: 10px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    display: block;
+}
+
+input[type="checkbox"], input[type="radio"] {
+    margin-right: 0.75rem;
+}
+
+textarea {
+    margin-bottom: 15px;
+    border: 1px solid #444;
+    border-radius: 5px;
+    display: block;
+    
+}
+fieldset{
     width: 150px;
-    background-color: transparent;
-    padding: 1rem;
-    color: white;
-    border: 2px solid white;
-    border-radius: 50px;
-    cursor: pointer;
-    font-family: 'Karla', sans-serif;
-    margin-bottom: 25px;
-}
-
-button:hover {
-    background-color: #FFFEF1;
-    color: #2C5E2E;
-}
-
-button:focus {
-    outline: 0;
-}
-p{
-    margin-top: 15px;
+    margin-top: 10px;
 }
